welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value len
  for (cpt1<-0 to len(nums)-1) {
                  ^